--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,5 @@
 <footer class="info">
-    <p>Double-click to edit a todo</p>
-    <!-- Remove the below line ↓ -->
-    <p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
-    <!-- Change this out with your name and url ↓ -->
-    <p>Created by <a href="http://todomvc.com">you</a></p>
-    <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+    <p>Doble click para editar una tarea pendiente.</p>
+    <p>Modificado por <a href="https://eavinti.com" target="_blank"><strong>Edgar Vintimilla</strong></a></p>
+    <p>plantilla creada por <a href="http://todomvc.com" target="_blank"><strong>TodoMVC</strong></a></p>
 </footer>
