--- a/src/app/todo/todo-add/todo-add.component.html
+++ b/src/app/todo/todo-add/todo-add.component.html
@@ -1,9 +1,9 @@
 
 
   <header class="header">
-      <h1>todos</h1>
+      <h1>Tareas</h1>
       <input class="new-todo" 
-      placeholder="What needs to be done?" 
+      placeholder="¿Qué necesitas terminar?" 
       [formControl]="txtInput"
       (keyup.enter)="addTodo()"
       autofocus>
